# uk_abm

./: .gitignore  Manifest.toml  Project.toml  main.py  pyproject.toml  requirements.txt
.cursor/rules/: marimo-notebooks.mdc
calibration_results/notebook_test_20250725_1731/: best_parameters.npy  best_simulation.npy  calibration_params.json  calibration_results.csv  calibration_results.npy  loss_function_pickled.pickle  results_summary.txt  scheduler_pickled.pickle  series_samp.h5
notebooks/: replicate_italy_calibration.ipynb  replicate_italy_calibration.py  test_calibration.ipynb  test_model.ipynb
src/julia/: initial_test.jl
src/python/: README.md  __init__.py  calibrate_beforeit.py  data_loader.py  example_calibration.py  julia_model_wrapper.py  test_julia_integration.py
src/uk_abm/: README.md  __init__.py  calibrate_beforeit.py  data_loader.py  example_calibration.py  julia_model_wrapper.py  model_results.py  test_julia_integration.py
src/uk_abm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
