[project]
name = "uk-abm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black-it",
    "ipykernel>=6.30.0",
    "juliacall>=0.9.26",
    "marimo>=0.14.15",
    "matplotlib>=3.10.3",
    "model-wrapper",
    "numpy==2.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "seaborn>=0.12.2",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
black-it = { path = "dev/black-it" }
model-wrapper = { path = "dev/model_wrapper", editable = true }
